force-app/main/default/objects/AKB_Article_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Article_Author__c</fullName>
        <description>The user who created the article.</description>
        <label>Article Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Id__c</fullName>
        <description>The ID of the article the feedback is coming in on.</description>
        <label>Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <description>The article number.</description>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <description>The title of the article.</description>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments on ways to improve article.</description>
        <label>Comments</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact that rated the article.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AKB Article Feedback</relationshipLabel>
        <relationshipName>AKB_Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Group__c</fullName>
        <description>The Functional Group for the Article</description>
        <label>Functional Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was the article helpful?</description>
        <label>Helpful?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <description>The session id for the current user.</description>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The Article Type (FAQ, How To, Informational, CAP)</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Custom Object to provide feedback on an AKB Article.</description>
    <label>AKB Article Feedback</label>
    <nameField>
        <displayFormat>AKB-{000000}</displayFormat>
        <label>AKB Article Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AKB Article Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Helpful__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>